--- a/test/sw/demo2/index.html
+++ b/test/sw/demo2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        HELLO
+        install
     </dev>
     <script type="text/javascript">
         if ('serviceWorker' in navigator) {
