--- a/test/sw/demo3/index.html
+++ b/test/sw/demo3/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <div>
-        HELLO
+        更新服务工作线程
+        在某个时间点，您的服务工作线程需要更新。 此时，您需要遵循以下步骤：
+        1.更新您的服务工作线程 JavaScript 文件。用户导航至您的站点时，浏览器会尝试在后台重新下载定义服务工作线程的脚本文件。如果服务工作线程文件与其当前所用文件存在字节差异，则将其视为“新服务工作线程”。
+        新服务工作线程将会启动，且将会触发 install 事件。
+        2.此时，旧服务工作线程仍控制着当前页面，因此新服务工作线程将进入 waiting 状态。
+        3.当网站上当前打开的页面关闭时，旧服务工作线程将会被终止，新服务工作线程将会取得控制权。
+        4.新服务工作线程取得控制权后，将会触发其 activate 事件。
+        5.出现在 activate 回调中的一个常见任务是缓存管理。您希望在 activate 回调中执行此任务的原因在于，如果您在安装步骤中清除了任何旧缓存，则继续控制所有当前页面的任何旧服务工作线程将突然无法从缓存中提供文件。
+        比如说我们有一个名为 'my-site-cache-v1' 的缓存，我们想要将该缓存拆分为一个页面缓存和一个博文缓存。这就意味着在安装步骤中我们创建了两个缓存：'pages-cache-v1' 和 'blog-posts-cache-v1'，且在激活步骤中我们要删除旧的 'my-site-cache-v1'。
+        具体做法为：遍历服务工作线程中的所有缓存，并删除未在缓存白名单中定义的任何缓存。
     </dev>
     <script type="text/javascript">
         if ('serviceWorker' in navigator) {
