--- a/test/sw/index.html
+++ b/test/sw/index.html
@@ -5,7 +5,7 @@
         <link rel="canonical" href="https://weather-pwa-sample.firebaseapp.com/">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weather PWA</title>
-        <link rel="stylesheet" type="text/css" href="/styles/inline.css">
+        <link rel="stylesheet" type="text/css" href="./styles/inline.css">
     </head>
     <body>
 
