--- a/test/sw/index.html
+++ b/test/sw/index.html
@@ -15,27 +15,27 @@
 
         <main class="main">
             <div class="card">
-                <a title="页面里和数据无关的最小UI模型" href="/step-02/index.html">构建 App Shell</a>
+                <a title="页面里和数据无关的最小UI模型" href="./step-02/index.html">构建 App Shell</a>
             </div>
 
             <div class="card">
-                <a href="/step-04/index.html">加入JS交互、用伪数据run</a>
+                <a href="./step-04/index.html">加入JS交互、用伪数据run</a>
             </div>
 
             <div class="card">
-                <a href="/step-05/index.html">通过AJAX请求来获取该数据</a>
+                <a href="./step-05/index.html">通过AJAX请求来获取该数据</a>
             </div>
 
             <div class="card">
-                <a href="/step-06/index.html">利用SW预缓存App Shell</a>
+                <a href="./step-06/index.html">利用SW预缓存App Shell</a>
             </div>
 
             <div class="card">
-                <a href="/step-07/index.html">缓存API</a>
+                <a href="./step-07/index.html">缓存API</a>
             </div>
 
             <div class="card">
-                <a title="加入添加主屏幕支持" href="/step-08/index.html">Add To Home Screen</a>
+                <a title="加入添加主屏幕支持" href="./step-08/index.html">Add To Home Screen</a>
             </div>
         </main>
     </body>
